--- a/tvieira/scss/components/_grid.scss
+++ b/tvieira/scss/components/_grid.scss
@@ -1,5 +1,5 @@
-@import 'mixin.scss';
-@import 'variables.scss';
+@import 'components/mixin.scss';
+@import 'components/variables.scss';
 
 body .grid-page{
     background-color:#ffffff;
